--- a/app/css/main.css
+++ b/app/css/main.css
@@ -878,6 +878,24 @@ main {
   max-width: 766px;
   text-align: center; }
 
+.reviews-slider .slick-slide {
+  height: 100%; }
+
+.slick-arrow {
+  position: absolute;
+  bottom: 0;
+  padding: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: #E62479; }
+
+.slick-prev {
+  left: calc(50% - 55px); }
+
+.slick-next {
+  right: calc(50% - 55px); }
+
 .reviews-box {
   background: #fff;
   -webkit-box-shadow: 0 20px 40px rgba(0, 0, 0, 0.05);
@@ -980,7 +998,8 @@ main {
     background: #E7F8FF;
     max-width: 1180px;
     width: 100%;
-    height: 286px; }
+    height: 286px;
+    border-radius: 10px; }
   .stages-orders h2 {
     margin: 0 auto 60px;
     text-align: center; }
@@ -1151,23 +1170,176 @@ footer {
 /*==========  Desktop First  ==========*/
 /* Large Devices, Wide Screens */
 @media only screen and (max-width: 1200px) {
-  /**/ }
+  .call .product-img {
+    min-width: 320px; }
+  .price {
+    padding: 20px; }
+  .old-price {
+    font-size: 20px;
+    line-height: 30px; }
+  .new-price {
+    font-size: 35px;
+    line-height: 45px; }
+  .call .main-product:before {
+    width: 420px;
+    height: 420px; }
+  .call .callback-box {
+    padding: 30px 27px; }
+  .call h2, h1 {
+    font-size: 40px;
+    margin: 0 0 20px; }
+  .main-content h3 {
+    font-size: 36px;
+    margin: 0 0 5px; }
+  .main-advantages {
+    font-size: 18px; }
+    .main-advantages li {
+      margin: 0 0 15px; }
+  .stages-orders:before {
+    width: calc(100% - 40px); }
+  .ocellus-img {
+    min-width: 280px; }
+  .container {
+    padding: 0 40px; }
+  .row {
+    margin: 0 -40px; }
+  .col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto {
+    padding: 0 20px; } }
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width: 992px) {
-  /**/ }
+  .call .main-product:before {
+    width: 320px;
+    height: 320px;
+    bottom: -113px;
+    top: auto;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+    left: calc(50% - 32px); }
+  .call .price {
+    top: -5px;
+    left: -32px;
+    z-index: 1; }
+  .main-advantages {
+    max-width: none; }
+  .call .product-img {
+    min-width: 220px;
+    max-width: 320px; }
+  .call {
+    padding: 40px 0; }
+  .main-product {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center; }
+  .call .main-product {
+    max-width: 320px;
+    margin: 35px auto 20px; }
+  .call .callback-box {
+    margin: 0 auto;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content; }
+    .call .callback-box h4 {
+      font-size: 20px;
+      margin: 0 auto 20px; }
+  h3 {
+    font-size: 20px; }
+  .stages-orders {
+    padding: 20px 0 10px; }
+    .stages-orders h2 {
+      margin: 0 auto 20px; }
+  h2 {
+    font-size: 30px; }
+  .p-120 {
+    padding: 60px 0; }
+  .ocellus-image {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    text-align: center;
+    padding: 20px;
+    margin: 30px 0 0; }
+    .ocellus-image h3 {
+      margin: 0 auto 8px; }
+  .ocellus-img {
+    min-width: auto;
+    max-width: 203px;
+    width: 100%;
+    margin: 0 auto; }
+  .ocellus .box-text {
+    margin: 0 0 30px;
+    max-width: none; }
+  .ocellus h2 {
+    margin: 10px 0; }
+  .reviews-box {
+    margin: 60px auto 70px;
+    padding: 60px 20px 30px; }
+  .reviews h2 {
+    margin: 0 auto 30px; }
+  .expert-img {
+    margin: 30px auto 0;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    max-width: 320px; }
+    .expert-img p {
+      bottom: 19px; }
+  .expert-text:before {
+    left: 0;
+    top: -40px; }
+  .expert h2 {
+    margin: 0 0 50px; } }
 
 /* Small Devices, Tablets */
 @media only screen and (max-width: 768px) {
-  /**/ }
+  .list-pay {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    margin: 15px 0 0; }
+  .footer-bottom {
+    padding: 30px 0 40px; }
+  .copyright {
+    max-width: 230px; }
+  .footer-top {
+    padding: 40px 0 0; }
+  .call .main-content {
+    padding: 0 10px; }
+  .stages-orders:before {
+    height: calc(100% - 211px); }
+  .stages-orders-box {
+    max-width: 242px;
+    margin: 0 auto 30px; }
+  .p-120 {
+    padding: 40px 0; } }
 
 /* Extra Small Devices, Phones */
+@media only screen and (max-width: 576px) {
+  .stages-orders:before {
+    height: calc(100% - 211px); } }
+
 @media only screen and (max-width: 480px) {
   /**/ }
 
 /* Custom, iPhone Retina */
-@media only screen and (max-width: 320px) {
-  /**/ }
+@media only screen and (max-width: 420px) {
+  .call .callback-box {
+    max-width: 320px;
+    width: 100%; }
+  .call .price {
+    left: 0; }
+  .call .product-img {
+    max-width: 300px; } }
 
 /*==========  Mobile First  ==========*/
 /* Custom, iPhone Retina */
