--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -801,6 +801,25 @@ main
     max-width: 766px
     text-align: center
 
+.reviews-slider
+  .slick-slide
+    height: 100%
+
+.slick-arrow
+  position: absolute
+  bottom: 0
+  padding: 0
+  width: 50px
+  height: 50px
+  border-radius: 50%
+  background: #E62479
+
+.slick-prev
+  left: calc(50% - 55px)
+
+.slick-next
+  right: calc(50% - 55px)
+
 .reviews-box
   background: #fff
   box-shadow: 0 20px 40px rgba(0, 0, 0, 0.05)
@@ -891,6 +910,7 @@ main
     max-width: 1180px
     width: 100%
     height: 286px
+    border-radius: 10px
   h2
     margin: 0 auto 60px
     text-align: center
