--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -202,7 +202,7 @@ header
   position: absolute
   left: 0
   top: 0
-  z-index: 3
+  z-index: 5
   width: 100%
   padding: 40px 0
 
@@ -1057,6 +1057,67 @@ footer
 .address
   max-width: 302px
   width: 100%
+
+.mobile-menu
+  position: fixed
+  left: 0
+  top: 0
+  z-index: 4
+  padding: 140px 20px 59px
+  display: none
+  background: #fff
+  width: 100%
+  overflow: hidden
+  &:before
+    content: ''
+    position: absolute
+    left: -450px
+    top: 0
+    width: 2260px
+    height: 100%
+    min-height: 1280px
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 70.47%, #FFFFFF 100%), url("../img/bg1.jpeg") no-repeat center
+      size: cover
+    opacity: .5
+    z-index: -2
+  .menu
+    font-size: 20px
+    li
+      margin: 0 0 20px
+      width: 100%
+  .location
+    margin: 38px 0 0
+    font-size: 20px
+
+.overlay
+  display: none
+  position: absolute
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  background: #2E2E2E
+  opacity: 0.9
+  z-index: 3
+
+.btn-burger
+  position: relative
+  width: 34px
+  height: 13px
+  justify-content: space-between
+  align-items: flex-end
+  flex-direction: column
+  margin: 0 0 0 auto
+  cursor: pointer
+  background: url("../img/burger.svg") no-repeat center
+    size: 100%
+
+.clicked
+  background: url("../img/close.svg") no-repeat center
+    size: 100%
+  width: 24px
+  height: 24px
+
 
 
 @import "media"
